OZON-RK3-demonstration fix categories overflow

--- a/ozon/src/views/ProductView/ProductView.scss
+++ b/ozon/src/views/ProductView/ProductView.scss
@@ -160,6 +160,12 @@
     margin: auto;
 }
 
+.linkWrapper {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
 @media screen and (max-width: $max-width-xl) {
     .block {
         width: 100%;
